--- a/SYK_computation.ipynb
+++ b/SYK_computation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e929ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "99aa6a9d-850d-40ad-9828-0faa9eca62c2",
    "metadata": {},
@@ -23,7 +31,9 @@
     "\n",
     "## Define Functions $R^p(\\omega)$ and $\\tilde{R}^p(t)$\n",
     "\n",
-    "`kernel_real_omega2` defines the kernel $R^p(\\omega)$ for real $\\omega$ by direct Hilbert transform. Then `analytic_continuation_from_amplitude` defines the $R^p(\\omega)$ for complex omega in upper half plane by Cauchy integral. These two functions are defined for generic amplitude function `amplitude(omega,**kwargs)` as an input variable. The amplitude function for SYK large $q$ is defined by `amplitude_SYK`. Other functions support these three functions."
+    "`kernel_real_omega2` defines the kernel $R^p(\\omega)$ for real $\\omega$ by direct Hilbert transform. Then `analytic_continuation_from_amplitude` defines the $R^p(\\omega)$ for complex omega in upper half plane by Cauchy integral. These two functions are defined for generic amplitude function `amplitude(omega,**kwargs)` as an input variable. The amplitude function for SYK large $q$ is defined by `amplitude_SYK`. Other functions support these three functions.\n",
+    "\n",
+    "This notebook depends on `kramers_kronig.calculate_R_t`. It does not depend on other functions in `kramers_kronig.py` and `finding_imag.py`."
    ]
   },
   {
